--- a/banking-service/src/main/resources/application-local.yml
+++ b/banking-service/src/main/resources/application-local.yml
@@ -63,10 +63,13 @@ jwt:
   refresh-expiration: 604800000
 
 # ============================================================
-# CORS - Allow localhost
+# CORS - Allow all localhost dev servers
 # ============================================================
 cors:
-  allowed-origins: http://localhost:3000,http://localhost:8080,http://127.0.0.1:3000
+  allowed-origins: http://localhost:3000,http://localhost:3001,http://localhost:5173,http://localhost:8080,http://127.0.0.1:3000,http://127.0.0.1:5173
+  allowed-methods: GET,POST,PUT,DELETE,OPTIONS,PATCH
+  allowed-headers: "*"
+  allow-credentials: true
 
 # ============================================================
 # Actuator - Full access for local development
@@ -89,6 +92,7 @@ logging:
     root: INFO
     com.RRBank: DEBUG
     org.springframework.security: DEBUG
+    org.springframework.web.cors: DEBUG
     org.hibernate.SQL: DEBUG
     org.hibernate.type.descriptor.sql: TRACE
     org.flywaydb: DEBUG
