--- a/banking-service/src/main/resources/application.yml
+++ b/banking-service/src/main/resources/application.yml
@@ -54,10 +54,10 @@ jwt:
   refresh-expiration: ${JWT_REFRESH_EXPIRATION:604800000}
 
 # ============================================================
-# CORS Configuration
+# CORS Configuration - Default (can be overridden per profile)
 # ============================================================
 cors:
-  allowed-origins: ${CORS_ALLOWED_ORIGINS:http://localhost:3000}
+  allowed-origins: ${CORS_ALLOWED_ORIGINS:http://localhost:3000,http://localhost:5173}
   allowed-methods: GET,POST,PUT,DELETE,OPTIONS,PATCH
   allowed-headers: "*"
   allow-credentials: true
