--- a/banking-service/.env.example
+++ b/banking-service/.env.example
@@ -1,35 +1,53 @@
 # ============================================================
 # RR-Bank Environment Variables Template
 # ============================================================
-# Copy this file to .env and fill in actual values.
-# NEVER commit .env to version control!
+# 
+# SETUP INSTRUCTIONS:
+# 1. Copy this file: cp .env.example .env
+# 2. Fill in your actual values in .env
+# 3. NEVER commit .env to version control!
+#
 # ============================================================
 
-# Spring Profile
-SPRING_PROFILES_ACTIVE=local
-
-# Server
-SERVER_PORT=8080
-
-# Database
+# ===============================================
+# DATABASE CONFIGURATION
+# ===============================================
 DB_URL=jdbc:postgresql://localhost:5432/rrbank
 DB_USERNAME=postgres
-DB_PASSWORD=your_password_here
+DB_PASSWORD=your_database_password_here
 
-# Redis
+# ===============================================
+# JWT CONFIGURATION
+# ===============================================
+# Generate a secure 512-bit key:
+#   Linux/Mac: openssl rand -base64 64
+#   Windows:   Use online generator or Java utility
+#
+# IMPORTANT: Use a different key for each environment!
+JWT_SECRET=your_base64_encoded_512_bit_secret_here
+JWT_EXPIRATION=86400000
+JWT_REFRESH_EXPIRATION=604800000
+
+# ===============================================
+# REDIS CONFIGURATION
+# ===============================================
 REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_PASSWORD=
 
-# Kafka
-KAFKA_ENABLED=false
+# ===============================================
+# KAFKA CONFIGURATION (Optional)
+# ===============================================
 KAFKA_BOOTSTRAP_SERVERS=localhost:9092
-KAFKA_SECURITY_PROTOCOL=PLAINTEXT
 
-# JWT (Generate a new 512-bit key for production: openssl rand -base64 64)
-JWT_SECRET=your_base64_encoded_512_bit_key_here
-JWT_EXPIRATION=86400000
-JWT_REFRESH_EXPIRATION=604800000
+# ===============================================
+# CORS CONFIGURATION
+# ===============================================
+CORS_ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5173
 
-# CORS
-CORS_ALLOWED_ORIGINS=http://localhost:3000
+# ===============================================
+# SSL/TLS (Production Only)
+# ===============================================
+# SSL_ENABLED=true
+# SSL_KEYSTORE_PATH=classpath:keystore.p12
+# SSL_KEYSTORE_PASSWORD=your_keystore_password
