--- a/banking-service/src/main/resources/bootstrap.yml
+++ b/banking-service/src/main/resources/bootstrap.yml
@@ -4,5 +4,6 @@ spring:
 
   cloud:
     config:
-      uri: http://localhost:8888
-      fail-fast: true
+      enabled: ${CONFIG_SERVER_ENABLED:true}
+      uri: ${CONFIG_SERVER_URI:http://localhost:8888}
+      fail-fast: false
