--- a/services/fraud-service/src/main/resources/application.yml
+++ b/services/fraud-service/src/main/resources/application.yml
@@ -2,19 +2,15 @@ spring:
   application:
     name: fraud-service
   
-  # Disable Kafka auto-configuration (not actively used)
-  autoconfigure:
-    exclude:
-      - org.springframework.boot.autoconfigure.kafka.KafkaAutoConfiguration
-  
-  kafka:
-    enabled: false
-  
   datasource:
     url: ${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/fraud_db}
     username: ${SPRING_DATASOURCE_USERNAME:rrbank}
     password: ${SPRING_DATASOURCE_PASSWORD:rrbank_secret}
     driver-class-name: org.postgresql.Driver
+    hikari:
+      maximum-pool-size: 10
+      minimum-idle: 5
+      connection-timeout: 30000
   
   jpa:
     hibernate:
@@ -28,6 +24,20 @@ spring:
     redis:
       host: ${SPRING_REDIS_HOST:localhost}
       port: ${SPRING_REDIS_PORT:6379}
+      password: ${SPRING_REDIS_PASSWORD:}
+      ssl:
+        enabled: ${SPRING_DATA_REDIS_SSL_ENABLED:false}
+
+  kafka:
+    enabled: ${SPRING_KAFKA_ENABLED:false}
+    bootstrap-servers: ${SPRING_KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
+    properties:
+      security:
+        protocol: ${SPRING_KAFKA_PROPERTIES_SECURITY_PROTOCOL:}
+      sasl:
+        mechanism: ${SPRING_KAFKA_PROPERTIES_SASL_MECHANISM:}
+        jaas:
+          config: ${SPRING_KAFKA_PROPERTIES_SASL_JAAS_CONFIG:}
 
 server:
   port: ${PORT:${SERVER_PORT:8087}}
@@ -63,6 +73,33 @@ spring:
   data:
     redis:
       host: redis
+
+  kafka:
+    enabled: true
+    bootstrap-servers: kafka:29092
+
+---
+spring:
+  config:
+    activate:
+      on-profile: oracle
+  
+  kafka:
+    enabled: true
+    properties:
+      security:
+        protocol: SASL_SSL
+      sasl:
+        mechanism: PLAIN
+  
+  jpa:
+    show-sql: false
+    hibernate:
+      ddl-auto: update
+
+logging:
+  level:
+    com.rrbank: INFO
 
 ---
 spring:
