--- a/services/account-service/src/main/resources/application.yml
+++ b/services/account-service/src/main/resources/application.yml
@@ -2,17 +2,8 @@ spring:
   application:
     name: account-service
   
-  # Disable Kafka auto-configuration (not actively used)
-  autoconfigure:
-    exclude:
-      - org.springframework.boot.autoconfigure.kafka.KafkaAutoConfiguration
-  
-  kafka:
-    enabled: false
-  
-  # Flyway database migration
   flyway:
-    enabled: true
+    enabled: ${SPRING_FLYWAY_ENABLED:false}
     baseline-on-migrate: true
     locations: classpath:db/migration
   
@@ -21,6 +12,10 @@ spring:
     username: ${SPRING_DATASOURCE_USERNAME:rrbank}
     password: ${SPRING_DATASOURCE_PASSWORD:rrbank_secret}
     driver-class-name: org.postgresql.Driver
+    hikari:
+      maximum-pool-size: 10
+      minimum-idle: 5
+      connection-timeout: 30000
   
   jpa:
     hibernate:
@@ -34,6 +29,20 @@ spring:
     redis:
       host: ${SPRING_REDIS_HOST:localhost}
       port: ${SPRING_REDIS_PORT:6379}
+      password: ${SPRING_REDIS_PASSWORD:}
+      ssl:
+        enabled: ${SPRING_DATA_REDIS_SSL_ENABLED:false}
+
+  kafka:
+    enabled: ${SPRING_KAFKA_ENABLED:false}
+    bootstrap-servers: ${SPRING_KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
+    properties:
+      security:
+        protocol: ${SPRING_KAFKA_PROPERTIES_SECURITY_PROTOCOL:}
+      sasl:
+        mechanism: ${SPRING_KAFKA_PROPERTIES_SASL_MECHANISM:}
+        jaas:
+          config: ${SPRING_KAFKA_PROPERTIES_SASL_JAAS_CONFIG:}
 
 server:
   port: ${PORT:${SERVER_PORT:8083}}
@@ -42,8 +51,9 @@ jwt:
   secret: ${JWT_SECRET:rrbank-jwt-secret-key-minimum-32-characters-long}
 
 services:
-  ledger-url: ${LEDGER_SERVICE_URL:http://localhost:8085}
-  customer-url: ${CUSTOMER_SERVICE_URL:http://localhost:8082}
+  ledger-url: ${SERVICES_LEDGER_URL:http://localhost:8085}
+  customer-url: ${SERVICES_CUSTOMER_URL:http://localhost:8082}
+  notification-url: ${SERVICES_NOTIFICATION_URL:http://localhost:8086}
 
 management:
   endpoints:
@@ -77,9 +87,37 @@ spring:
     redis:
       host: redis
 
+  kafka:
+    enabled: true
+    bootstrap-servers: kafka:29092
+
 services:
   ledger-url: http://ledger-service:8085
   customer-url: http://customer-service:8082
+  notification-url: http://notification-service:8086
+
+---
+spring:
+  config:
+    activate:
+      on-profile: oracle
+  
+  kafka:
+    enabled: true
+    properties:
+      security:
+        protocol: SASL_SSL
+      sasl:
+        mechanism: PLAIN
+  
+  jpa:
+    show-sql: false
+    hibernate:
+      ddl-auto: update
+
+logging:
+  level:
+    com.rrbank: INFO
 
 ---
 spring:
