--- a/services/audit-service/src/main/resources/application.yml
+++ b/services/audit-service/src/main/resources/application.yml
@@ -2,19 +2,15 @@ spring:
   application:
     name: audit-service
   
-  # Disable Kafka auto-configuration (not actively used)
-  autoconfigure:
-    exclude:
-      - org.springframework.boot.autoconfigure.kafka.KafkaAutoConfiguration
-  
-  kafka:
-    enabled: false
-  
   datasource:
     url: ${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/audit_db}
     username: ${SPRING_DATASOURCE_USERNAME:rrbank}
     password: ${SPRING_DATASOURCE_PASSWORD:rrbank_secret}
     driver-class-name: org.postgresql.Driver
+    hikari:
+      maximum-pool-size: 10
+      minimum-idle: 5
+      connection-timeout: 30000
   
   jpa:
     hibernate:
@@ -23,6 +19,24 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
+
+  kafka:
+    enabled: ${SPRING_KAFKA_ENABLED:false}
+    bootstrap-servers: ${SPRING_KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
+    properties:
+      security:
+        protocol: ${SPRING_KAFKA_PROPERTIES_SECURITY_PROTOCOL:}
+      sasl:
+        mechanism: ${SPRING_KAFKA_PROPERTIES_SASL_MECHANISM:}
+        jaas:
+          config: ${SPRING_KAFKA_PROPERTIES_SASL_JAAS_CONFIG:}
+    consumer:
+      group-id: audit-service-group
+      auto-offset-reset: earliest
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      properties:
+        spring.json.trusted.packages: "*"
 
 server:
   port: ${PORT:${SERVER_PORT:8088}}
@@ -54,6 +68,33 @@ spring:
   
   datasource:
     url: jdbc:postgresql://postgres:5432/audit_db
+
+  kafka:
+    enabled: true
+    bootstrap-servers: kafka:29092
+
+---
+spring:
+  config:
+    activate:
+      on-profile: oracle
+  
+  kafka:
+    enabled: true
+    properties:
+      security:
+        protocol: SASL_SSL
+      sasl:
+        mechanism: PLAIN
+  
+  jpa:
+    show-sql: false
+    hibernate:
+      ddl-auto: update
+
+logging:
+  level:
+    com.rrbank: INFO
 
 ---
 spring:
