--- a/services/notification-service/src/main/resources/application.yml
+++ b/services/notification-service/src/main/resources/application.yml
@@ -2,19 +2,15 @@ spring:
   application:
     name: notification-service
   
-  # Disable Kafka auto-configuration (not actively used)
-  autoconfigure:
-    exclude:
-      - org.springframework.boot.autoconfigure.kafka.KafkaAutoConfiguration
-  
-  kafka:
-    enabled: false
-  
   datasource:
     url: ${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/notification_db}
     username: ${SPRING_DATASOURCE_USERNAME:rrbank}
     password: ${SPRING_DATASOURCE_PASSWORD:rrbank_secret}
     driver-class-name: org.postgresql.Driver
+    hikari:
+      maximum-pool-size: 10
+      minimum-idle: 5
+      connection-timeout: 30000
   
   jpa:
     hibernate:
@@ -23,6 +19,56 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
+
+  kafka:
+    enabled: ${SPRING_KAFKA_ENABLED:false}
+    bootstrap-servers: ${SPRING_KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
+    properties:
+      security:
+        protocol: ${SPRING_KAFKA_PROPERTIES_SECURITY_PROTOCOL:}
+      sasl:
+        mechanism: ${SPRING_KAFKA_PROPERTIES_SASL_MECHANISM:}
+        jaas:
+          config: ${SPRING_KAFKA_PROPERTIES_SASL_JAAS_CONFIG:}
+
+  # Email Configuration
+  mail:
+    host: ${MAIL_HOST:smtp.gmail.com}
+    port: ${MAIL_PORT:587}
+    username: ${MAIL_USERNAME:}
+    password: ${MAIL_PASSWORD:}
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+            required: true
+          connectiontimeout: 5000
+          timeout: 5000
+          writetimeout: 5000
+    default-encoding: UTF-8
+
+  # Thymeleaf Configuration for Email Templates
+  thymeleaf:
+    prefix: classpath:/templates/
+    suffix: .html
+    mode: HTML
+    encoding: UTF-8
+    cache: true
+
+# Application Configuration
+app:
+  name: ${APP_NAME:RR Bank}
+  frontend-url: ${FRONTEND_URL:http://localhost:5173}
+  support-email: ${SUPPORT_EMAIL:support@rrbank.com}
+  security-email: ${SECURITY_EMAIL:security@rrbank.com}
+  
+  # Email sending preferences
+  email:
+    enabled: ${EMAIL_ENABLED:true}
+    from-name: ${EMAIL_FROM_NAME:RR Bank}
+    from-address: ${EMAIL_FROM_ADDRESS:noreply@rrbank.com}
 
 server:
   port: ${PORT:${SERVER_PORT:8086}}
@@ -58,6 +104,36 @@ spring:
   datasource:
     url: jdbc:postgresql://postgres:5432/notification_db
 
+  kafka:
+    enabled: true
+    bootstrap-servers: kafka:29092
+
+---
+spring:
+  config:
+    activate:
+      on-profile: oracle
+  
+  kafka:
+    enabled: true
+    properties:
+      security:
+        protocol: SASL_SSL
+      sasl:
+        mechanism: PLAIN
+  
+  jpa:
+    show-sql: false
+    hibernate:
+      ddl-auto: update
+  
+  thymeleaf:
+    cache: true
+
+logging:
+  level:
+    com.rrbank: INFO
+
 ---
 spring:
   config:
@@ -68,6 +144,9 @@ spring:
     show-sql: false
     hibernate:
       ddl-auto: update
+  
+  thymeleaf:
+    cache: true
 
 logging:
   level:
