--- a/services/transaction-service/src/main/resources/application.yml
+++ b/services/transaction-service/src/main/resources/application.yml
@@ -2,19 +2,15 @@ spring:
   application:
     name: transaction-service
   
-  # Disable Kafka auto-configuration (not actively used)
-  autoconfigure:
-    exclude:
-      - org.springframework.boot.autoconfigure.kafka.KafkaAutoConfiguration
-  
-  kafka:
-    enabled: false
-  
   datasource:
     url: ${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/transaction_db}
     username: ${SPRING_DATASOURCE_USERNAME:rrbank}
     password: ${SPRING_DATASOURCE_PASSWORD:rrbank_secret}
     driver-class-name: org.postgresql.Driver
+    hikari:
+      maximum-pool-size: 10
+      minimum-idle: 5
+      connection-timeout: 30000
   
   jpa:
     hibernate:
@@ -28,6 +24,20 @@ spring:
     redis:
       host: ${SPRING_REDIS_HOST:localhost}
       port: ${SPRING_REDIS_PORT:6379}
+      password: ${SPRING_REDIS_PASSWORD:}
+      ssl:
+        enabled: ${SPRING_DATA_REDIS_SSL_ENABLED:false}
+
+  kafka:
+    enabled: ${SPRING_KAFKA_ENABLED:false}
+    bootstrap-servers: ${SPRING_KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
+    properties:
+      security:
+        protocol: ${SPRING_KAFKA_PROPERTIES_SECURITY_PROTOCOL:}
+      sasl:
+        mechanism: ${SPRING_KAFKA_PROPERTIES_SASL_MECHANISM:}
+        jaas:
+          config: ${SPRING_KAFKA_PROPERTIES_SASL_JAAS_CONFIG:}
 
 server:
   port: ${PORT:${SERVER_PORT:8084}}
@@ -36,9 +46,10 @@ jwt:
   secret: ${JWT_SECRET:rrbank-jwt-secret-key-minimum-32-characters-long}
 
 services:
-  ledger-url: ${LEDGER_SERVICE_URL:http://localhost:8085}
-  fraud-url: ${FRAUD_SERVICE_URL:http://localhost:8087}
-  account-url: ${ACCOUNT_SERVICE_URL:http://localhost:8083}
+  ledger-url: ${SERVICES_LEDGER_URL:http://localhost:8085}
+  fraud-url: ${SERVICES_FRAUD_URL:http://localhost:8087}
+  account-url: ${SERVICES_ACCOUNT_URL:http://localhost:8083}
+  notification-url: ${SERVICES_NOTIFICATION_URL:http://localhost:8086}
 
 management:
   endpoints:
@@ -72,10 +83,38 @@ spring:
     redis:
       host: redis
 
+  kafka:
+    enabled: true
+    bootstrap-servers: kafka:29092
+
 services:
   ledger-url: http://ledger-service:8085
   fraud-url: http://fraud-service:8087
   account-url: http://account-service:8083
+  notification-url: http://notification-service:8086
+
+---
+spring:
+  config:
+    activate:
+      on-profile: oracle
+  
+  kafka:
+    enabled: true
+    properties:
+      security:
+        protocol: SASL_SSL
+      sasl:
+        mechanism: PLAIN
+  
+  jpa:
+    show-sql: false
+    hibernate:
+      ddl-auto: update
+
+logging:
+  level:
+    com.rrbank: INFO
 
 ---
 spring:
